--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url: "https://bpkrumme.github.io"
 github_username:  bpkrumme
 
 # Build settings
-theme: minima
+theme: jekyll-theme-architect
 plugins:
   - jekyll-feed
 
