remade page from default config

--- a/_config.yml
+++ b/_config.yml
@@ -18,14 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Red Hat Brad
+title: Red Hat Brad - Doing all the Things
 email: bkrumme@redhat.com
-description: Ansible all the things...and other stuff.
-url: "https://bpkrumme.github.io"
+description: Welcome to the blog that's written by someone who hates to blog, but loves tech.
+url: https://bpkrumme.github.io
 github_username:  bpkrumme
 
 # Build settings
-theme: jekyll-theme-architect
+theme: minima
 plugins:
   - jekyll-feed
 
