--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Brad Does Tech!
-email: bkrumme@redhat.com
+email: bradk@redhat.com
 description: Welcome to the blog that's written by someone who hates to blog, but loves tech.
 url: https://www.braddoestech.com
 github_username:  bpkrumme
