--- a/_config.yml
+++ b/_config.yml
@@ -28,14 +28,15 @@ github_username:  bpkrumme
 repository: bpkrumme/bpkrumme.github.io
 
 # Build settings
-theme: minima
+remote_theme: "mmistakes/minimal-mistakes"
 
-#minimal_mistakes_skin: "dark"
+minimal_mistakes_skin: "dark"
 show_excerpts: true
 excerpt_separator: <!-- endexcerpt -->
 
 plugins:
   - jekyll-feed
+  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
