--- a/_config.yml
+++ b/_config.yml
@@ -75,11 +75,14 @@ defaults:
     values:
       layout: single
       author_profile: true
-      classes: wide
       read_time: true
       show_date: true
       author: Brad
       share: true
+      toc: true
+      toc_sticky: true
+      header:
+        og_image: /assets/images/bdt_square.jpeg
   # _pages
   - scope:
       path: ""
