Updated Author Details

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 Brad:
   name: "Brad Krumme"
   avatar: "/assets/images/bk_profile.jpg"
-  bio: "Solution Architect at Red Hat specializing in Ansible and the Ansible Automation Platform."
+  bio: "Senior Account Solution Architect at Red Hat in the Enterprise Sales Organization"
   location: USA
   links:
     - label: "Email"
